[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/gfred2/scripts/controllers/performance_profiler_dock_controller.gd" id="1"]

[node name="PerformanceProfilerDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainContainer/Header"]
layout_mode = 2
text = "Performance Profiler"

[node name="HSeparator" type="HSeparator" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearButton" type="Button" parent="MainContainer/Header"]
layout_mode = 2
text = "Clear"

[node name="Toolbar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MainContainer/Toolbar"]
layout_mode = 2
text = "Start Profiling"

[node name="StopButton" type="Button" parent="MainContainer/Toolbar"]
layout_mode = 2
text = "Stop Profiling"

[node name="ExportButton" type="Button" parent="MainContainer/Toolbar"]
layout_mode = 2
text = "Export Report"

[node name="Content" type="TabContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RealTime" type="VBoxContainer" parent="MainContainer/Content"]
layout_mode = 2

[node name="MetricsContainer" type="GridContainer" parent="MainContainer/Content/RealTime"]
layout_mode = 2
columns = 2

[node name="FPSLabel" type="Label" parent="MainContainer/Content/RealTime/MetricsContainer"]
layout_mode = 2
text = "FPS:"

[node name="FPSValue" type="Label" parent="MainContainer/Content/RealTime/MetricsContainer"]
layout_mode = 2
text = "60.0"

[node name="FrameTimeLabel" type="Label" parent="MainContainer/Content/RealTime/MetricsContainer"]
layout_mode = 2
text = "Frame Time:"

[node name="FrameTimeValue" type="Label" parent="MainContainer/Content/RealTime/MetricsContainer"]
layout_mode = 2
text = "16.67ms"

[node name="MemoryLabel" type="Label" parent="MainContainer/Content/RealTime/MetricsContainer"]
layout_mode = 2
text = "Memory:"

[node name="MemoryValue" type="Label" parent="MainContainer/Content/RealTime/MetricsContainer"]
layout_mode = 2
text = "0 MB"

[node name="ObjectsLabel" type="Label" parent="MainContainer/Content/RealTime/MetricsContainer"]
layout_mode = 2
text = "Objects:"

[node name="ObjectsValue" type="Label" parent="MainContainer/Content/RealTime/MetricsContainer"]
layout_mode = 2
text = "0"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/Content/RealTime"]
layout_mode = 2

[node name="PerfChart" type="Panel" parent="MainContainer/Content/RealTime"]
layout_mode = 2
size_flags_vertical = 3

[node name="History" type="VBoxContainer" parent="MainContainer/Content"]
layout_mode = 2

[node name="HistoryList" type="ItemList" parent="MainContainer/Content/History"]
layout_mode = 2
size_flags_vertical = 3

[node name="Analysis" type="VBoxContainer" parent="MainContainer/Content"]
layout_mode = 2

[node name="AnalysisText" type="TextEdit" parent="MainContainer/Content/Analysis"]
layout_mode = 2
size_flags_vertical = 3
editable = false
placeholder_text = "Performance analysis will appear here..."